# handlers/category.go
@@ -11,10 +11,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type ErrorJson struct {
-	Error string `json:"error"`
-}
-
 type GetCategoryHandlerData struct {
 	Category models.Category  `json:"category"`
 	Project  models.Project   `json:"project"`
@@ -29,10 +25,10 @@ type GetCategoryHandlerData struct {
 // @Produce: json
 // @Param id path int true "Category ID"
 // @Success 200 {object} GetCategoryHandlerData
-// @Failure 400 {object} ErrorJson
-// @Failure 500 {object} ErrorJson
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
 // @Router /category/{id} [get]
-// @Security Bearer
+// @Security BearerAuth
 func GetCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		pid := c.Param("id")
@@ -40,33 +36,33 @@ func GetCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 		// pasar string id a int id
 		id, err := strconv.Atoi(pid)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
 		// Inicializar la base de datos
 		db, err := database.InitDB(cfg)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 		defer db.Close()
 
 		category, err := models.GetCategoryByID(db, id)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
 		project, err := models.GetProjectByID(db, category.ProjectID)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
 		trackers, err := models.GetAllTrackers(db)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
@@ -78,7 +74,7 @@ func GetCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 
 		issues, err := models.GetIssuesByCategoryID(db, id)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
@@ -88,7 +84,7 @@ func GetCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 
 		users, err := models.GetUsersByCategoryID(db, category.ID)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
@@ -107,30 +103,30 @@ func GetCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 // @Produce: json
 // @Param category body models.Category true "Category"
 // @Success 200 {object} models.Category
-// @Failure 400 {object} ErrorJson
-// @Failure 500 {object} ErrorJson
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
 // @Router /category [post]
-// @Security Bearer
+// @Security BearerAuth
 func CreateCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var category models.Category
 		err := c.BindJSON(&category)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
 		// Inicializar la base de datos
 		db, err := database.InitDB(cfg)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 		defer db.Close()
 
 		id, err := models.CreateCategory(db, &category)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
@@ -147,42 +143,42 @@ func CreateCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 // @Param id path int true "Category ID"
 // @Param category body models.Category true "Category"
 // @Success 200 {object} models.Category
-// @Failure 400 {object} ErrorJson
-// @Failure 500 {object} ErrorJson
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
 // @Router /category/{id} [put]
-// @Security Bearer
+// @Security BearerAuth
 func UpdateCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		pid := c.Param("id")
 		id, err := strconv.Atoi(pid)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
 		var category models.Category
 		err = c.BindJSON(&category)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
 		if id != category.ID {
-			c.AbortWithStatusJSON(http.StatusBadRequest, ErrorJson{Error: fmt.Sprintf("ID in body %d and URL %d do not match", category.ID, id)})
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": fmt.Sprintf("ID in body %d and URL %d do not match", category.ID, id)})
 			return
 		}
 
 		// Inicializar la base de datos
 		db, err := database.InitDB(cfg)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 		defer db.Close()
 
 		err = models.UpdateCategory(db, &category)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
@@ -196,30 +192,30 @@ func UpdateCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 // @Produce: json
 // @Param id path int true "Category ID"
 // @Success 204
-// @Failure 400 {object} ErrorJson
-// @Failure 500 {object} ErrorJson
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
 // @Router /category/{id} [delete]
-// @Security Bearer
+// @Security BearerAuth
 func DeleteCategoryHandler(cfg *config.Config) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		pid := c.Param("id")
 		id, err := strconv.Atoi(pid)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
 		// Inicializar la base de datos
 		db, err := database.InitDB(cfg)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 		defer db.Close()
 
 		err = models.DeleteCategory(db, id)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, ErrorJson{Error: err.Error()})
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 			return
 		}
 
